--- a/README.Rmd
+++ b/README.Rmd
@@ -41,11 +41,7 @@ library(kneedle)
 # The base function assumes the graph is both concave and increasing.
 # First and second inputs must be vectors of integers or doubles.
 
-#|
-#|          /
-#|         /
-#| -------/
-#|______________
+plot(c(1,2,3,4,5,6), c(0,1,2,3,40,100), xlab = "x", ylab = "y", pch=21, col="blue", bg="lightblue", type = "b")
 knee <- kneedle(c(1,2,3,4,5,6), c(0,1,2,3,40,100))
 print(knee)
 ```
@@ -58,20 +54,12 @@ library(kneedle)
 #Concavity parameter must be changed if the graph is convex. Furthermore, you 
 #must specify if the y is increasing or decreasing as x increases. 
 
-#|    
-#|   /-------
-#|  /
-#| /
-#|______________
+plot(c(1,2,3,4,5), c(0,20,40,41,42), xlab = "x", ylab = "y", pch=21, col="blue", bg="lightblue", type = "b")
 knee <- kneedle(c(1,2,3,4,5), c(0,20,40,41,42), concave = FALSE, decreasing = FALSE)
 print(knee)
 
 
-#|
-#| -------\
-#|         \
-#|          \
-#|______________
+plot(c(1,2,3,4,5), c(100,99,98,50,0), xlab = "x", ylab = "y", pch=21, col="blue", bg="lightblue", type = "b")
 knee <- kneedle(c(1,2,3,4,5), c(100,99,98,50,0), concave = FALSE, decreasing = TRUE)
 print(knee)
 ```
@@ -85,21 +73,15 @@ library(kneedle)
 # Sensitivity defaults to 1 as per the referenced paper. However, you can adjust 
 # it. A higher sensitivity make the rules more 'stringent' in classifying a 
 # 'candidate knee' point as a knee. 
-#|
-#|          /
-#|         /
-#| -------/
-#|______________
+
+plot(c(1,2,3,4,5), c(0,1,2,40,60), xlab = "x", ylab = "y", pch=21, col="blue", bg="lightblue", type = "b")
 knee <- kneedle(c(1,2,3,4,5), c(0,1,2,40,60), sensitivity = 1)
 print(knee)
 
 # In this case with sensitivity = 2, we see that that (3,2) is no longer considered a knee point. No
 # other knees were detected.
-#|
-#|          /
-#|         /
-#| -------/
-#|______________
+
+plot(c(1,2,3,4,5), c(0,1,2,40,60), xlab = "x", ylab = "y", pch=21, col="blue", bg="lightblue", type = "b")
 knee <- kneedle(c(1,2,3,4,5), c(0,1,2,40,60), sensitivity = 2)
 print(knee)
 ```
