status symbols for package in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,15 @@ knitr::opts_chunk$set(
 )
 ```
 
+# pkgdown <img src="man/figures/logo.png" align="right" alt="" width="120" />
+
+<!-- badges: start -->
+[![CRAN Status](https://www.r-pkg.org/badges/version/pkgdown)](https://cran.r-project.org/package=pkgdown){.pkgdown-release}
+[![R-CMD-check](https://github.com/r-lib/pkgdown/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/pkgdown/actions){.pkgdown-devel}
+[![Codecov test coverage](https://codecov.io/gh/r-lib/pkgdown/branch/main/graph/badge.svg)](https://app.codecov.io/gh/r-lib/pkgdown?branch=main)
+<!-- badges: end -->
+
+
 # kneedle
 
 <!-- badges: start -->
