adding a codecov file to display badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,16 +14,11 @@ knitr::opts_chunk$set(
 ```
 
 
-<!-- badges: start -->
-[//]: <> ([![CRAN Status](https://www.r-pkg.org/badges/version/pkgdown)](https://cran.r-project.org/package=pkgdown){.pkgdown-release})
-[//]: <> ([![R-CMD-check](https://github.com/r-lib/pkgdown/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/pkgdown/actions){.pkgdown-devel})
-[//]: <> ([![Codecov test coverage](https://codecov.io/gh/r-lib/pkgdown/branch/main/graph/badge.svg)](https://app.codecov.io/gh/r-lib/pkgdown?branch=main))
-<!-- badges: end -->
-
 
 # kneedle
 
 <!-- badges: start -->
+[![codecov.io](https://codecov.io/github/etam4260/kneedle/coverage.svg?branch=master)](https://codecov.io/github/etam4260/kneedle?branch=master)
 <!-- badges: end -->
 
 The goal of kneedle is to provide an easy to use implementation of the kneedle 
