--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 # kneedle
 
 <!-- badges: start -->
-[![codecov.io](https://codecov.io/github/etam4260/kneedle/coverage.svg?branch=master)](https://codecov.io/github/etam4260/kneedle?branch=master)
+[![codecov.io](https://codecov.io/gh/etam4260/kneedle/coverage.svg)](https://codecov.io/gh/etam4260/kneedle)
 <!-- badges: end -->
 
 The goal of kneedle is to provide an easy to use implementation of the kneedle 
