coverage should now display correctly now

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 # kneedle
 
 <!-- badges: start -->
-[![codecov.io](https://codecov.io/gh/etam4260/kneedle/coverage.svg)](https://codecov.io/gh/etam4260/kneedle)
+[![Codecov test coverage](https://codecov.io/gh/etam4260/kneedle/branch/main/graph/badge.svg)](https://codecov.io/gh/etam4260/kneedle?branch=main)
 <!-- badges: end -->
 
 The goal of kneedle is to provide an easy to use implementation of the kneedle 
