Adding R Cmd check badge and workflow as well as project status badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,9 @@ knitr::opts_chunk$set(
 # kneedle
 
 <!-- badges: start -->
+[![Project Status: WIP - Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 [![Codecov test coverage](https://codecov.io/gh/etam4260/kneedle/branch/main/graph/badge.svg)](https://codecov.io/gh/etam4260/kneedle?branch=main)
+[![R-CMD-check](https://github.com/etam4260/kneedle/workflows/R-CMD-check/badge.svg)](https://github.com/etam4260/kneedle/actions)
 <!-- badges: end -->
 
 The goal of kneedle is to provide an easy to use implementation of the kneedle 
